[tool.poetry]
name = "llm-zoomcamp-2024"
version = "0.1.0"
description = ""
authors = ["Emanuel Tomé <emanuelrstome@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
tdqm = "^0.0.1"
jupyterlab = "^4.2.2"
openai = "^1.35.3"
elasticsearch = "^8.14.0"
scikit-learn = "^1.5.0"
pandas = "^2.2.2"
python-dotenv = "^1.0.1"
groq = "^0.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
